objects/FSLABB_FieldFailureRecord__c.object
<CustomObject>
    <description>for FSL Implementation:
The Field Failure Record related to an Asset, WO and WOLI</description>
    <fields>
        <fullName>FSLABB_Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Adjust / Align</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calibrate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lube</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provide training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebuild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reconfigure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reliability replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove / reinstall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove / replace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restart / reload</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tightened connections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tune control</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FSLABB_Asset_ref__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Field Failure Records</relationshipLabel>
        <relationshipName>Field_Failure_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSLABB_Case_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Case created for the Root Cause Analysis (RCA)</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Field Failure Records</relationshipLabel>
        <relationshipName>Field_Failure_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSLABB_Cause__c</fullName>
        <label>Cause</label>
        <picklist>
            <picklistValues>
                <fullName>Air supply (Non-system failure)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air supply (System failure)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damaged (Non-system failure)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damaged (System failure)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dirt / dust (Non-system failure)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dirt / dust (System failure)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improper installation (System failure)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal wear (Non-system failure)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal wear (System failure)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operation (Non-system failure)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Non-system failure)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (System failure)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts failure (Non-system failure)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts failure (System failure)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power (Non-system failure)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power (System failure)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power/Grounding (Non-system failure)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power/Grounding (System failure)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process (Non-system failure)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reliability maintenance (Non-system failure)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software (Non-system failure)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software (System failure)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown (Non-system failure)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water supply (Non-system failure)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FSLABB_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSLABB_FFRTitle__c</fullName>
        <label>Title</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSLABB_Problem__c</fullName>
        <label>Problem</label>
        <picklist>
            <picklistValues>
                <fullName>Broken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD variation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faulty scanning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improper installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermittent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leaking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD variation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not operable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of range</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of specification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reliability maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety hazard</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FSLABB_RCA_Requested__c</fullName>
        <label>RCA Requested</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FSLABB_WorkOrderLineItem_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order Line Item</label>
        <referenceTo>WorkOrderLineItem</referenceTo>
        <relationshipLabel>Field Failure Records</relationshipLabel>
        <relationshipName>Field_Failure_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSLABB_WorkOrder_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Field Failure Records</relationshipLabel>
        <relationshipName>Field_Failure_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Field Failure Record</label>
    <nameField>
        <displayFormat>FFR-{00000}</displayFormat>
        <label>FFR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Failure Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FSLABB_AssetIsMandatory</fullName>
        <active>true</active>
        <description>Assets on WOLI is mandatory for the FFR</description>
        <errorConditionFormula>ISBLANK(FSLABB_Asset_ref__c)</errorConditionFormula>
        <errorMessage>To create FFR, the WorkOrderLineItem should have an Asset.</errorMessage>
    </validationRules>
</CustomObject>